--- a/ML/requirements.txt
+++ b/ML/requirements.txt
@@ -1,4 +1,5 @@
-﻿absl-py==0.15.0
+numpy==1.19.5﻿
+absl-py==0.15.0
 alabaster==0.7.12
 appdirs==1.4.4
 asgiref==3.4.1
@@ -98,7 +99,6 @@ nbconvert==6.0.7
 nbformat==5.1.3
 nest-asyncio==1.5.5
 notebook==5.2.2
-numpy==1.19.5
 oauthlib==3.2.0
 opencv-python==4.6.0.66
 openpyxl==3.0.10
